Se carga chat en ambas apps

--- a/promigrante/movil/www/manifest.json
+++ b/promigrante/movil/www/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "PriMigrante",
+  "name": "ProMigrante",
   "short_name": "ProMigrante",
   "start_url": "index.html",
   "display": "standalone",
